# collabfuzz

./: .dockerignore  Dockerfile  Makefile  README.md
docker/: Makefile  gen.py
framework/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
framework/src/: config.rs  fuzzers.rs  lib.rs  logger.rs  protos.rs  server.rs  storage.rs  types.rs  utils.rs
framework/src/analysis/: analysis_interface.rs  config.rs  mod.rs  pass_interface.rs  utils.rs
framework/src/analysis/analyses/: condition_bytes_analysis.rs  coverage_utils.rs  dfsan_utils.rs  fuzzer_coverage_analysis.rs  fuzzer_info.rs  fuzzer_observed_conditions_analysis.rs  generation_graph_analysis.rs  global_coverage_analysis.rs  instruction_count_analysis.rs  instruction_count_utils.rs  libsvm.rs  mod.rs  observed_conditions_analysis.rs  observed_conditions_utils.rs  regressor_analysis.rs  static_branch_metrics.rs  tainted_conditions_analysis.rs  test_analysis.rs  test_case_benefit_analysis.rs
framework/src/analysis/passes/: bb_taint_tracer_pass.rs  bytes_tracer_pass.rs  generic_instr_pass.rs  instruction_counter_pass.rs  mod.rs  test_pass.rs
framework/src/reactor/: analysis.rs  control.rs  mod.rs  protocol.rs  worker.rs
framework/src/scheduler/: broadcast.rs  cost_benefit.rs  enfuzz.rs  hybrid_benefit.rs  mod.rs  nop.rs  random.rs  regressor.rs  roundrobin.rs  selective.rs  test.rs  test_case_benefit.rs  util.rs
framework/tests/: integration.rs
framework/tests/assets/: count.bc  count.c  cutoff.bc  cutoff.c  empty  empty_stripped
llvm-passes/: CMakeLists.txt
llvm-passes/bb-taint-tracer-pass/: CMakeLists.txt  bitbucket-pipelines.yml
llvm-passes/bb-taint-tracer-pass/rtlib/: CMakeLists.txt  io_wrappers.c  project_abilist.txt  tainter.h
llvm-passes/bb-taint-tracer-pass/rtlib/runtime_rs/: CMakeLists.txt  Cargo.toml  build.rs  wrapper.h
llvm-passes/bb-taint-tracer-pass/scripts/: generate_abilist.py
llvm-passes/bb-taint-tracer-pass/src/: BBTaintTracer.cpp  CMakeLists.txt
llvm-passes/bb-taint-tracer-pass/test/: lit.cfg.in
llvm-passes/bb-taint-tracer-pass/test/rtlib/: debug.c  fgetc.c  fgetc_unlocked.c  fgets.c  fgets_unlocked.c  fread.c  fread_unlocked.c  getc.c  getc_unlocked.c  getchar.c  getchar_unlocked.c  getdelim.c  getline.c  mmap.c  pread.c  read.c
llvm-passes/bb-taint-tracer-pass/test/src/: branch.ll  branch_dfsan.c  ctor_dtor.ll  switch.ll  switch_dfsan.c
llvm-passes/benefit-metric-pass/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run.sh
llvm-passes/benefit-metric-pass/bb_reachability/: BBReachability.cpp  CMakeLists.txt
llvm-passes/condition-tracer-pass/: .gitmodules  CMakeLists.txt  bitbucket-pipelines.yml
llvm-passes/condition-tracer-pass/benchmark/: CMakeLists.txt  md5sum.bc
llvm-passes/condition-tracer-pass/rtlib/: CMakeLists.txt  RuntimeLibrary.cpp  Tracer.cpp  Tracer.h
llvm-passes/condition-tracer-pass/src/: CMakeLists.txt  ConditionTracer.cpp
llvm-passes/condition-tracer-pass/test/: lit.cfg.in
llvm-passes/condition-tracer-pass/test/rtlib/: double_switch.c  file.c  switch.c
llvm-passes/condition-tracer-pass/test/src/: and.ll  clang_deps.c  cmp.ll  ctor_dtor.ll  switch.ll  switch_critical.ll
llvm-passes/edge-tracer-pass/: .gitignore  CMakeLists.txt  bitbucket-pipelines.yml
llvm-passes/edge-tracer-pass/benchmark/: CMakeLists.txt  benchmark.py.in
llvm-passes/edge-tracer-pass/rtlib/: .clang-tidy  CMakeLists.txt  RuntimeLibrary.cpp  Tracer.cpp  Tracer.h
llvm-passes/edge-tracer-pass/src/: CMakeLists.txt  EdgeTracer.cpp
llvm-passes/edge-tracer-pass/test/: CMakeLists.txt  lit.cfg.in
llvm-passes/edge-tracer-pass/test/rtlib/: error.c  file.c
llvm-passes/edge-tracer-pass/test/src/: check_callback.ll  clang_deps.c  critical_edge.ll  ctor_dtor.ll  single_block.ll
llvm-passes/id-assigner-pass/: CMakeLists.txt
llvm-passes/id-assigner-pass/include/collabfuzz/: IDAssigner.h
llvm-passes/id-assigner-pass/src/: IDAssigner.cpp
llvm-passes/input-bytes-tracer-pass/: CMakeLists.txt  bitbucket-pipelines.yml
llvm-passes/input-bytes-tracer-pass/cmake/: CMakeCargo.cmake
llvm-passes/input-bytes-tracer-pass/rtlib/: CMakeLists.txt  Cargo.toml  build.rs  project_abilist.txt
llvm-passes/input-bytes-tracer-pass/rtlib/src/: io_wrappers.rs  lib.rs  tainter.rs  tracer.rs
llvm-passes/input-bytes-tracer-pass/src/: CMakeLists.txt  InputBytesTracer.cpp
llvm-passes/input-bytes-tracer-pass/test/: CMakeLists.txt  lit.cfg.in
llvm-passes/input-bytes-tracer-pass/test/rtlib/: fgetc.c  fgetc_unlocked.c  fgets.c  fread.c  fread_unlocked.c  getc.c  getc_unlocked.c  getdelim.c  getline.c  info.c  mmap.c  pread.c  read.c  read_partial.c
llvm-passes/input-bytes-tracer-pass/test/src/: branch.ll  branch_dfsan.c  ctor_dtor.ll  switch.ll  switch_dfsan.c
llvm-passes/instr-count-wrapper-pass/: .gitmodules  CMakeLists.txt  bitbucket-pipelines.yml
llvm-passes/instr-count-wrapper-pass/rtlib/: .clang-format  CMakeLists.txt  icount_wrapper_abilist.txt  io_wrappers.c  tainter.h
llvm-passes/instr-count-wrapper-pass/rtlib/runtime_rs/: CMakeLists.txt  Cargo.toml
llvm-passes/instr-count-wrapper-pass/src/: CMakeLists.txt  InstCountWrapper.cpp
llvm-passes/instr-count-wrapper-pass/test/: CMakeLists.txt  lit.cfg.in
llvm-passes/instr-count-wrapper-pass/test/rtlib/: complex.c  debug.c  fgetc.c  fgetc_unlocked.c  fgets.c  fread.c  fread_unlocked.c  getc.c  getc_unlocked.c  getchar.c  getchar_unlocked.c  getdelim.c  getline.c  mmap.c  pread.c  read.c
llvm-passes/instruction-counter-pass/: CMakeLists.txt  bitbucket-pipelines.yml
llvm-passes/instruction-counter-pass/Pass/: CMakeLists.txt  InstructionCounterPass.cpp  icount_config.h.in
llvm-passes/instruction-counter-pass/Runtime/: CMakeLists.txt
llvm-passes/instruction-counter-pass/Tests/: CMakeLists.txt  lit.cfg.in
llvm-passes/instruction-counter-pass/Utils/: CMakeLists.txt  clang_icount_wrapper.py.in
llvm-passes/static-branch-metrics-pass/: .gitignore  CMakeLists.txt
llvm-passes/static-branch-metrics-pass/src/: CMakeLists.txt  Pass.cpp
llvm-passes/wrapper/: CMakeLists.txt  collab_fuzz_wrapper.in
(+193 files in other folders)
