[package]
name = "collab-fuzz"
version = "0.1.0"
authors = ["Sebastian Österlund <s.osterlund@vu.nl>",
	   "Elia Geretto <e.geretto@vu.nl"]
edition = "2018"

[dependencies]
zmq = "0.9"
protobuf = { version = "2", features = ["with-bytes"] }
rand = "0.7"
log = "0.4"
env_logger = "0.7"
sha2 = "0.8"
rustc-serialize = "0.3"
structopt = "0.3"
downcast-rs = "1.0"
ctrlc = { version = "3.1", features = ["termination"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10"
rayon = "1.2"
petgraph = "0.4"
fixedbitset = "0.2"
rusqlite = "0.20"
priority-queue = "0.7"
libsvm-sys = "3.24.0"

[build-dependencies]
protoc-rust = ">=2.8"
cmake = "0.1"
glob = "0.3"
