[package]
name = "InputBytesTracerRT"
version = "0.1.0"
authors = ["Elia Geretto <e.geretto@vu.nl>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
once_cell = "1.3"
snafu = "0.6"
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
bindgen = "0.53"
